// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Temp] render renders without crashing 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "white",
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="btn-back"
  >
    <View
      onLayout={[Function]}
      outlined={false}
      style={
        [
          {
            "backgroundColor": "black",
            "borderBottomColor": "black",
            "borderLeftColor": "black",
            "borderRightColor": "black",
            "borderTopColor": "black",
          },
          [
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderBottomLeftRadius": 20,
              "borderBottomRightRadius": 20,
              "borderTopLeftRadius": 20,
              "borderTopRightRadius": 20,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingBottom": 10,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 10,
            },
            [
              undefined,
              false,
              undefined,
            ],
          ],
        ]
      }
      testID="button-container"
      type="primary"
    >
      <Text />
      <Text
        outlined={false}
        style={
          [
            {
              "color": "white",
            },
            [
              undefined,
              undefined,
            ],
          ]
        }
        type="primary"
      >
        GO BACK
      </Text>
    </View>
  </View>
</View>
`;

exports[`[Temp] render should render [Dark] theme 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "black",
        "flexBasis": 0,
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityState={
      {
        "disabled": false,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="btn-back"
  >
    <View
      onLayout={[Function]}
      outlined={false}
      style={
        [
          {
            "backgroundColor": "white",
            "borderBottomColor": "white",
            "borderLeftColor": "white",
            "borderRightColor": "white",
            "borderTopColor": "white",
          },
          [
            {
              "alignItems": "center",
              "alignSelf": "stretch",
              "borderBottomLeftRadius": 20,
              "borderBottomRightRadius": 20,
              "borderTopLeftRadius": 20,
              "borderTopRightRadius": 20,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingBottom": 10,
              "paddingLeft": 20,
              "paddingRight": 20,
              "paddingTop": 10,
            },
            [
              undefined,
              false,
              undefined,
            ],
          ],
        ]
      }
      testID="button-container"
      type="primary"
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "black",
              "fontSize": 16,
            },
            [
              {
                "color": "black",
              },
              {
                "marginRight": 12,
              },
            ],
            {
              "fontFamily": "IcoMoon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
      <Text
        outlined={false}
        style={
          [
            {
              "color": "black",
            },
            [
              undefined,
              undefined,
            ],
          ]
        }
        type="primary"
      >
        GO BACK
      </Text>
    </View>
  </View>
</View>
`;
